<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.saungit.muhtar.buildinglayoutp1.MainActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <ImageView
        android:layout_marginTop="@dimen/dimen10dp"
        android:layout_width="@dimen/dimen200dp"
        android:layout_height="@dimen/dimen200dp"
        android:src="@mipmap/ic_launcher"
        />

    <LinearLayout
        android:layout_marginTop="@dimen/dimen10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            style="@style/myTextView"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_name"
            android:layout_marginStart="@dimen/dimen5dp"
            style="@style/myTextView"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="@dimen/dimen10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address"
            style="@style/myTextView"/>
        <TextView
            android:layout_marginStart="@dimen/dimen5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_address"
            style="@style/myTextView"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="@dimen/dimen10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            style="@style/myTextView"/>
        <TextView
            android:layout_marginStart="@dimen/dimen5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_phone"
            style="@style/myTextView"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="@dimen/dimen10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hobi"
            style="@style/myTextView"/>
        <TextView
            android:layout_marginStart="@dimen/dimen5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_hobi"
            style="@style/myTextView"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="@dimen/dimen10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/study"
            style="@style/myTextView"/>
        <TextView
            android:layout_marginStart="@dimen/dimen5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_study"
            style="@style/myTextView"/>
    </LinearLayout>

</LinearLayout>
